--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@mui/material": "^5.0.0",
-    "@mui/icons-material": "^5.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@mui/x-date-pickers": "^5.0.0",
     "dayjs": "^1.10.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0"
   },
   "devDependencies": {
-    "vite": "^2.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "eslint": "^7.0.0",
-    "eslint-plugin-react": "^7.0.0"
+    "eslint-plugin-react": "^7.0.0",
+    "vite": "^2.0.0"
   }
 }
